--- a/exerciseonrecycler/app/src/main/res/layout/row_layout.xml
+++ b/exerciseonrecycler/app/src/main/res/layout/row_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,15 +8,15 @@
         android:id="@+id/studentName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="@dimen/margin17dp"
+        android:layout_marginLeft="@dimen/margin17dp"
+        android:layout_marginTop="@dimen/margin20dp"
+        android:layout_marginEnd="@dimen/margin17dp"
+        android:layout_marginRight="@dimen/margin17dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:gravity="center"
-        android:padding="20dp"
-        android:text="TextView"
+        android:padding="@dimen/margin20dp"
+        android:text="@string/textview"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
