--- a/AlarmManagerDemo/app/src/main/res/layout/activity_main.xml
+++ b/AlarmManagerDemo/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/generate"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias=".40"/>
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:text="@string/cancel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp16"
+        app:layout_constraintLeft_toLeftOf="@id/button"
+        app:layout_constraintRight_toRightOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
