--- a/GalleryAppMvvm/app/src/main/res/layout/time_item.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/time_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:id="@+id/timelineImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
