--- a/GalleryAppMvvm/app/src/main/res/layout/userprofile_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/userprofile_fragment_layout.xml
@@ -6,68 +6,75 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:padding="@dimen/dp45_login_padding">
-    <TextView
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/user_info_heading"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:text="User \nInformation"
-        android:textSize="@dimen/heading_text_sizesp40"
+        app:layout_constraintVertical_bias=".10">
+
+        <ImageView
+            android:id="@+id/image_view_userprofile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY" />
+
+
+    </androidx.cardview.widget.CardView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        app:layout_constraintEnd_toEndOf="@id/card_view"
+        app:layout_constraintBottom_toBottomOf="@id/card_view"
+        android:id="@+id/edit_profile_image_fab"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-
-    <ImageView
-        android:id="@+id/image_view_userprofile"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin_dp20"
-        android:layout_marginBottom="@dimen/margin_dp20"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@id/text_username"
-        app:layout_constraintStart_toStartOf="@+id/user_info_heading"
-        app:layout_constraintTop_toBottomOf="@id/user_info_heading" />
-
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        android:focusable="true" />
     <TextView
-        android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
-        android:drawableLeft="@drawable/ic_sentiment_very_satisfied_black_24dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
         android:id="@+id/text_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_40dp"
+        android:drawableLeft="@drawable/ic_sentiment_very_satisfied_black_24dp"
+        android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
         android:text="DummyName"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".60"
-        />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/card_view" />
 
     <TextView
-        android:drawableLeft="@drawable/ic_email_black_24dp"
-        android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
         android:id="@+id/text_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_dp20"
+        android:layout_marginTop="@dimen/margin_40dp"
+        android:drawableLeft="@drawable/ic_email_black_24dp"
+        android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
         android:text="Dummy email"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/text_username"
-         />
+        app:layout_constraintTop_toBottomOf="@id/text_username" />
 
     <Button
         android:id="@+id/btn_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias=".0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_40dp"
         android:background="@drawable/button_background"
         android:text="Logout"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/text_email"
         tools:layout_editor_absoluteX="45dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
