--- a/GalleryAppMvvm/app/src/main/res/layout/category_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_fragment_layout.xml
@@ -24,8 +24,8 @@
         app:srcCompat="@drawable/ic_add_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="@dimen/margin_dp20"
+        android:layout_marginBottom="@dimen/margin_dp20"
 
         />
 
