--- a/GalleryAppMvvm/app/src/main/res/layout/category_inforamtion_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_inforamtion_fragment_layout.xml
@@ -20,10 +20,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_input_add"
+        app:srcCompat="@drawable/ic_add_black_24dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginEnd="@dimen/margin_dp20"
+        android:layout_marginBottom="@dimen/margin_dp20"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
