--- a/GalleryAppMvvm/app/src/main/res/layout/category_info_item.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_info_item.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:layout_margin="1dp"
         android:scaleType="centerCrop"
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="108dp"
+        android:layout_height="108dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
