--- a/newsapp3/app/src/main/res/layout/small_layout.xml
+++ b/newsapp3/app/src/main/res/layout/small_layout.xml
@@ -4,44 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:paddingStart="@dimen/padding20dp"
+    android:paddingEnd="@dimen/padding20dp"
     android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/smallText"
-        android:layout_width="234dp"
-        android:layout_height="103dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="@dimen/small_text_width234dp"
+        android:layout_height="@dimen/small_text_height_103dp"
         android:text="@string/with_no_trade_deal_signed_donald_trump_narendra_modi_jamboree_was_about_two_men_not_two_countries"
-        android:textColor="#000000"
+        android:textColor="@android:color/black"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/smallImage"
-        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintEnd_toStartOf="@+id/smallImageHolder"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/smallTitle" />
 
-    <ImageView
-        android:id="@+id/smallImage"
-        android:layout_width="112dp"
-        android:layout_height="110dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="fitXY"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/smallImageHolder"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        app:cardCornerRadius="@dimen/margin_dp10"
+        app:layout_constraintBottom_toBottomOf="@id/smallText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/smallText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toTopOf="@id/smallTitle">
+
+        <ImageView
+            android:id="@+id/smallImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="@+id/smallText"
+            app:srcCompat="@drawable/ic_launcher_background" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/smallTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
+        android:layout_marginTop="@dimen/margin_top_30dp"
+        android:text="@string/textview"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/small_title_text18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,19 +56,18 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="@dimen/margin18dp"
         android:text="@string/headlines_5_hours_ago"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/smallText"
         app:layout_constraintTop_toBottomOf="@+id/smallText" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="@id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/smallImageHolder"
+        app:layout_constraintHorizontal_bias="100"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/smallImage"
         app:srcCompat="@drawable/ic_chat_black_24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
