--- a/Storageq1/app/src/main/res/layout/activity_main.xml
+++ b/Storageq1/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="@dimen/margin_top"
         android:ems="10"
         android:hint="@string/enter_text_here"
         android:inputType="textPersonName"
@@ -23,7 +23,7 @@
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/margin_top_dp40"
         android:text="@string/submit"
         app:layout_constraintEnd_toStartOf="@+id/retrieve"
         app:layout_constraintHorizontal_bias="0.711"
@@ -34,19 +34,20 @@
         android:id="@+id/retrieve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginTop="@dimen/margin_top_dp40"
+        android:layout_marginEnd="@dimen/margin_end_100dp"
         android:text="@string/retrieve"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="211dp"
-        android:layout_height="204dp"
-        android:layout_marginTop="160dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top160dp"
         android:text="@string/textview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintEnd_toEndOf="@id/retrieve"
+        app:layout_constraintStart_toStartOf="@id/submit"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
