--- a/GalleryAppMvvm/app/src/main/res/layout/add_category_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/add_category_layout.xml
@@ -1,60 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:padding="@dimen/dp45_login_padding">
+
     <TextView
         android:id="@+id/add_category_heading"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/heading_text_sizesp40"
+        android:text="Add Category"
         android:textColor="@android:color/white"
-        android:text="Add \nCategory"
-        />
+        android:textSize="@dimen/heading_text_sizesp40"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/add_category_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/add_category_image_view_holder"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="@dimen/margin_40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="@dimen/margin_40dp"
+        android:layout_marginEnd="@dimen/margin_40dp"
         app:layout_constraintBottom_toTopOf="@id/add_category_name"
-        android:scaleType="fitXY"
-        android:layout_marginTop="@dimen/margin_dp20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/add_category_heading"
-        app:srcCompat="@drawable/ic_launcher_background"
-        android:layout_marginBottom="@dimen/margin_dp20"/>
+        app:cardCornerRadius="100dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/select_photo"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:background="@color/transparent"
+            />
+        <ImageView
+            android:id="@+id/add_category_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            />
+    </androidx.cardview.widget.CardView>
 
     <EditText
-        android:hint="Enter Category Name"
-        android:textColorHint="@android:color/darker_gray"
-        android:layout_marginTop="@dimen/margin_dp20"
-        android:background="@drawable/edittext_background"
+        android:id="@+id/add_category_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/add_category_name"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/margin_dp20"
+        android:background="@drawable/edit_text_background"
+        android:hint="Enter Category Name"
+        android:gravity="center"
+        android:maxLines="1"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias=".60"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias=".70" />
 
 
     <Button
-        android:textColor="@android:color/white"
-        android:background="@drawable/button_background"
         android:id="@+id/add_category_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_dp20"
+        android:background="@drawable/button_background"
         android:text="Add Category"
-        android:textStyle="bold"
-        android:textSize="@dimen/button_text_size21sp"
         android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/button_text_size21sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/add_category_name" />
 
 
