--- a/GalleryAppMvvm/app/src/main/res/layout/login_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/login_fragment_layout.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:maxLines="1"
         android:text="ash@ash.com"
         android:textSize="24sp"
         android:id="@+id/email_txt"
@@ -26,7 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/edittext_background"
         android:drawableStart="@drawable/ic_email_black_24dp"
         android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
         android:hint="@string/email_hint"
@@ -37,13 +37,14 @@
         app:layout_constraintVertical_bias="0.35" />
 
     <EditText
+        android:maxLines="1"
         android:id="@+id/password_txt"
         android:text="12345678"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/edit_text_background"
         android:drawableStart="@drawable/ic_vpn_key_black_24dp"
         android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
         android:hint="@string/password_hint"
