--- a/GalleryAppMvvm/app/src/main/res/menu/bottom_navigation.xml
+++ b/GalleryAppMvvm/app/src/main/res/menu/bottom_navigation.xml
@@ -3,17 +3,14 @@
     <item
         android:id="@+id/nav_category"
         android:icon="@drawable/ic_category_icon_24dp"
-        android:title="Categories"/>
+        android:title="@string/categories"/>
     <item
         android:id="@+id/nav_timeline"
         android:icon="@drawable/ic_timeline_icon_24dp"
-        android:title="Timeline"/>
+        android:title="@string/timeline"/>
     <item
         android:id="@+id/nav_user"
         android:icon="@drawable/ic_person_black_24dp"
-        android:title="Profile"/>
-    <item
-        android:id="@+id/nav_logout"
-        android:icon="@drawable/ic_logout_icon_24dp"
-        android:title="Logout"/>
+        android:title="@string/profile"/>
+
 </menu>
