--- a/GalleryAppMvvm/app/src/main/res/layout/category_info_item.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_info_item.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <ProgressBar
+        android:id="@+id/categoryInfoItemProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
     <ImageView
-        android:layout_margin="1dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/imageView"
-        android:layout_width="108dp"
-        android:layout_height="108dp"
+        android:scaleType="fitXY"
+        android:id="@+id/categoryInfoItemimageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:contentDescription="@string/desc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
