--- a/GalleryAppMvvm/app/src/main/res/layout/category_item.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_item.xml
@@ -1,39 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp">
+    android:padding="1dp">
 
+    <ProgressBar
+        android:id="@+id/categoryItemProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/categoryImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="108dp"
-        android:scaleType="centerCrop"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/desc"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/categoryTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/transparent_black"
-        android:text="Dummy Category"
+        android:background="@drawable/gradient"
+        android:paddingTop="50dp"
+        android:text="@string/dummy_category"
         android:textColor="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/categoryImageView"
         app:layout_constraintEnd_toEndOf="@id/categoryImageView"
         app:layout_constraintStart_toStartOf="@id/categoryImageView" />
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="108dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
