--- a/GalleryAppMvvm/app/src/main/res/layout/add_category_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/add_category_layout.xml
@@ -1,81 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:padding="@dimen/dp45_login_padding">
+    android:padding="@dimen/login_padding_45dp">
 
     <TextView
         android:id="@+id/add_category_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Category"
+        android:text="@string/add_category"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/heading_text_sizesp40"
+        android:textSize="@dimen/heading_text_sizesp_40sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/select_photo"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/button_text_size_21sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/add_category_image_view"
+        app:layout_constraintEnd_toEndOf="@id/add_category_image_view"
+        app:layout_constraintStart_toStartOf="@id/add_category_image_view"
+        app:layout_constraintTop_toTopOf="@id/add_category_image_view" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/add_category_image_view_holder"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/add_category_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="@dimen/margin_40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="@dimen/margin_40dp"
+        android:layout_marginTop="@dimen/margin_40dp"
         android:layout_marginEnd="@dimen/margin_40dp"
+        android:layout_marginBottom="@dimen/margin_40dp"
         app:layout_constraintBottom_toTopOf="@id/add_category_name"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_category_heading"
-        app:cardCornerRadius="100dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark">
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/select_photo"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:background="@color/transparent"
-            />
-        <ImageView
-            android:id="@+id/add_category_image_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            />
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toBottomOf="@id/add_category_heading" />
+
 
     <EditText
         android:id="@+id/add_category_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_dp20"
+        android:layout_marginTop="@dimen/margin_20dp"
         android:background="@drawable/edit_text_background"
-        android:hint="Enter Category Name"
         android:gravity="center"
+        android:hint="@string/enter_category_name"
         android:maxLines="1"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".70" />
+        app:layout_constraintVertical_bias=".70"
+         />
 
 
     <Button
         android:id="@+id/add_category_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_dp20"
+        android:layout_marginTop="@dimen/margin_20dp"
         android:background="@drawable/button_background"
-        android:text="Add Category"
+        android:text="@string/add_category"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/button_text_size21sp"
+        android:textSize="@dimen/button_text_size_21sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/add_category_name" />
 
