--- a/GalleryAppMvvm/app/src/main/res/layout/category_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_fragment_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="3"
+        app:spanCount="2"
         tools:itemCount="20"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="161dp"
@@ -21,11 +21,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:focusable="true"
         app:srcCompat="@drawable/ic_add_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/margin_dp20"
-        android:layout_marginBottom="@dimen/margin_dp20"
+        android:layout_marginEnd="@dimen/margin_20dp"
+        android:layout_marginBottom="@dimen/margin_20dp"
 
         />
 
