--- a/GalleryAppMvvm/app/src/main/res/layout/category_inforamtion_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/category_inforamtion_fragment_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/category_info_item"
-        app:spanCount="4"
+        app:spanCount="2"
         tools:itemCount="30"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -23,8 +23,8 @@
         app:srcCompat="@drawable/ic_add_black_24dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="@dimen/margin_dp20"
-        android:layout_marginBottom="@dimen/margin_dp20"
+        android:layout_marginEnd="@dimen/margin_20dp"
+        android:layout_marginBottom="@dimen/margin_20dp"
         android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
