--- a/GalleryAppMvvm/app/src/main/res/layout/userprofile_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/userprofile_fragment_layout.xml
@@ -5,60 +5,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:padding="@dimen/dp45_login_padding">
+    android:padding="@dimen/login_padding_45dp">
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:cardBackgroundColor="@color/colorAccent"
-        app:cardCornerRadius="75dp"
+    <ProgressBar
+        android:id="@+id/image_view_userprofile_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/image_view_userprofile"
+        app:layout_constraintEnd_toEndOf="@id/image_view_userprofile"
+        app:layout_constraintStart_toStartOf="@id/image_view_userprofile"
+        app:layout_constraintTop_toTopOf="@id/image_view_userprofile" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image_view_userprofile"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/margin_40dp"
+        android:layout_marginEnd="@dimen/margin_40dp"
+        android:layout_marginBottom="@dimen/margin_40dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".10">
+        app:layout_constraintVertical_bias=".10" />
 
-        <ImageView
-            android:id="@+id/image_view_userprofile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY" />
-
-
-    </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        app:layout_constraintEnd_toEndOf="@id/card_view"
-        app:layout_constraintBottom_toBottomOf="@id/card_view"
         android:id="@+id/edit_profile_image_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_edit"
-        android:focusable="true" />
+        android:focusable="true"
+        android:layout_marginEnd="@dimen/margin_10dp"
+        android:layout_marginBottom="@dimen/margin_10dp"
+        app:layout_constraintBottom_toBottomOf="@id/image_view_userprofile"
+        app:layout_constraintEnd_toEndOf="@id/image_view_userprofile"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+
     <TextView
+
         android:id="@+id/text_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_40dp"
-        android:drawableLeft="@drawable/ic_sentiment_very_satisfied_black_24dp"
-        android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
-        android:text="DummyName"
+        android:drawableStart="@drawable/ic_sentiment_very_satisfied_black_24dp"
+        android:drawablePadding="@dimen/edit_text_drwable_padding_10dp"
+        android:text="@string/dummyname"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/card_view" />
+        app:layout_constraintTop_toBottomOf="@id/image_view_userprofile" />
 
     <TextView
         android:id="@+id/text_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_40dp"
-        android:drawableLeft="@drawable/ic_email_black_24dp"
-        android:drawablePadding="@dimen/edit_text_drwable_paddingdp10"
-        android:text="Dummy email"
+        android:drawableStart="@drawable/ic_email_black_24dp"
+        android:drawablePadding="@dimen/edit_text_drwable_padding_10dp"
+        android:text="@string/dummy_email"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -66,8 +73,6 @@
 
     <Button
         android:id="@+id/btn_logout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias=".0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_40dp"
@@ -75,6 +80,8 @@
         android:text="@string/logout"
         android:textColor="@android:color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_email"
+        app:layout_constraintVertical_bias=".0"
         tools:layout_editor_absoluteX="45dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
